--- a/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
@@ -6,7 +6,7 @@
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
   <ol class="govuk-breadcrumbs__list">
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
+      <a class="govuk-breadcrumbs__link" href="{% url 'sc-home' %}">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
       <a class="govuk-breadcrumbs__link" href="#">Strategic action summary</a>
