Adding new HomePageView

--- a/update_supply_chain_information/assets/stylesheets/application.scss
+++ b/update_supply_chain_information/assets/stylesheets/application.scss
@@ -47,3 +47,9 @@ span.moj-sub-navigation__link,
 span.moj-sub-navigation__link:hover {
   color: $govuk-secondary-text-colour;
 }
+
+.home-services-para {
+  margin-top: 7px;
+  font: 16px;
+  font-family: sans-serif;
+}
