Tests for HomePage

--- a/update_supply_chain_information/supply_chains/templates/sc_home.html
+++ b/update_supply_chain_information/supply_chains/templates/sc_home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Supply chains – {{ block.super }}{% endblock %}
+
 {% block body %}
     <h1 class="govuk-heading-xl">Update supply chain information</h1>
     <p class="govuk-body">
