SC-HomePage updates

--- a/update_supply_chain_information/supply_chains/templates/task_list.html
+++ b/update_supply_chain_information/supply_chains/templates/task_list.html
@@ -115,7 +115,7 @@
             </button>
         </form>
     {% else %}
-        <a href={% url 'sc-home' %} class="govuk-button govuk-button--secondary">Back to home</a>
+        <a href={% url 'sc-home' %} class="govuk-button govuk-button--secondary">Back</a>
     {% endif %}
 
 {% endblock %}
