Introducing Notification banner within SCHome when all SCs have been completed.

--- a/update_supply_chain_information/supply_chains/templates/sc_home.html
+++ b/update_supply_chain_information/supply_chains/templates/sc_home.html
@@ -20,9 +20,18 @@
     </p>
 
     {% if update_complete %}
-        <ul class="govuk-list govuk-list--bullet">
-            <li>All supply chains have been completed for this month.</li>
-        </ul>
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+            <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                No action required
+            </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">
+                All supply chains have been completed for this month.
+            </p>
+            </div>
+        </div>
     {% else %}
         <ul class="govuk-list govuk-list--bullet">
             <li>
