Futher changes to re-map homepage links to new home

--- a/update_supply_chain_information/supply_chains/templates/403.html
+++ b/update_supply_chain_information/supply_chains/templates/403.html
@@ -9,7 +9,7 @@
         <li>If you typed the web address, check it is correct</li>
         <li>If you pasted the web address, check you copied the entire address</li>
         <li>
-            Browse the <a class="govuk-link" href="{% url 'sc-home' %}">homepage</a>
+            Browse the <a class="govuk-link" href="{% url 'index' %}">homepage</a>
              to find the information you need</li>
         {% get_feedback_emails_as_string as feedback_emails %}
         <li>
