--- a/update_supply_chain_information/supply_chains/templates/common_base.html
+++ b/update_supply_chain_information/supply_chains/templates/common_base.html
@@ -1,3 +1,7 @@
+{% comment %}
+This template will contain common base components to be used across Forms and Visualisation apps. A copy of this will be maintained within visualisation repo(RT-389) and expected to be in sync with this file. Any change will have to be applied to both places.
+{% endcomment %}
+
 <!DOCTYPE html>
 {% load render_bundle from webpack_loader %}
 {% load webpack_static from webpack_loader %}
