--- a/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
+++ b/update_supply_chain_information/supply_chains/templates/strategic_action_summary.html
@@ -29,7 +29,7 @@
         </span>
       </h2>
       <div class="govuk-accordion__section-summary govuk-body summary-action-description" id="{{ summary }}">
-        {{ action.description|truncatechars:150 }}
+        {{ action.description|truncatewords:30 }}
       </div>
     </div>
     <div id="{{ content }}" class="govuk-accordion__section-content" aria-labelledby="{{ heading }}">
