--- a/update_supply_chain_information/supply_chains/templates/sau_review.html
+++ b/update_supply_chain_information/supply_chains/templates/sau_review.html
@@ -6,13 +6,13 @@
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="{% url 'sc-home' %}">Monthly update</a>
+        <a class="govuk-breadcrumbs__link" href="{% url 'sc-home' %}">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-task-list' supply_chain.slug %}">{{ supply_chain.name }}</a>
+      </li>
+      <li class="govuk-breadcrumbs__list-item">
+        <a class="govuk-breadcrumbs__link" href="{% url 'monthly-update-review' supply_chain.slug strategic_action.slug update.slug %}" aria-current="page">Current monthly update for {{ strategic_action.name }}</a>
       </li>
     </ol>
   </nav>
