--- a/update_supply_chain_information/supply_chains/templates/task_complete.html
+++ b/update_supply_chain_information/supply_chains/templates/task_complete.html
@@ -6,13 +6,13 @@
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
         <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
-        </li>
-        <li class="govuk-breadcrumbs__list-item">
-            <a class="govuk-breadcrumbs__link" href="{% url 'sc-home' %}">Monthly update</a>
+            <a class="govuk-breadcrumbs__link" href="{% url 'sc-home' %}">Home</a>
         </li>
         <li class="govuk-breadcrumbs__list-item">
             <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-task-list' view.supply_chain.slug %}">{{ view.supply_chain.name }}</a>
+        </li>
+        <li class="govuk-breadcrumbs__list-item">
+            <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-update-complete' view.supply_chain.slug %}" aria-current="page">Update complete</a>
         </li>
     </ol>
 </nav>
