--- a/update_supply_chain_information/supply_chains/templates/task_list.html
+++ b/update_supply_chain_information/supply_chains/templates/task_list.html
@@ -6,7 +6,7 @@
 <nav class="govuk-breadcrumbs" aria-label="breadcrumbs">
     <ol class="govuk-breadcrumbs__list">
       <li class="govuk-breadcrumbs__list-item">
-        <a class="govuk-breadcrumbs__link" href="{% url 'sc-home' %}">Home</a>
+        <a class="govuk-breadcrumbs__link" href="{% url 'index' %}">Home</a>
       </li>
       <li class="govuk-breadcrumbs__list-item">
         <a class="govuk-breadcrumbs__link" href="{% url 'supply-chain-task-list' view.supply_chain.slug %}" aria-current="page">{{ view.supply_chain.name }}</a>
@@ -115,7 +115,7 @@
             </button>
         </form>
     {% else %}
-        <a href={% url 'sc-home' %} class="govuk-button govuk-button--secondary">Back to home</a>
+        <a href={% url 'index' %} class="govuk-button govuk-button--secondary">Back to home</a>
     {% endif %}
 
 {% endblock %}
