--- a/update_supply_chain_information/supply_chains/templates/index.html
+++ b/update_supply_chain_information/supply_chains/templates/index.html
@@ -39,7 +39,8 @@
     <div class="govuk-grid-column-one-half">
         <ul class="govuk-list">
             <li>
-                <a class="services-heading govuk-link govuk-!-font-weight-bold" href="#">Strategic action progress</a>
+                {% get_action_progress_route request.user as route %}
+                <a class="services-heading govuk-link govuk-!-font-weight-bold" href={{ route }}>Strategic action progress</a>
                 <p class="home-services-para">
                     Explore the latest status on departmental strategic actions across the critical supply chain.
                 </p>
