--- a/update_supply_chain_information/action_progress/templates/action_progress_base.html
+++ b/update_supply_chain_information/action_progress/templates/action_progress_base.html
@@ -60,7 +60,8 @@ they are handled within different sub classes
   <button class="govuk-button" data-module="govuk-button" type="submit">
     Apply filters
   </button>
-  <a href={% url 'action-progress' %} class="govuk-link"
+  {% get_action_progress_route request.user as route %}
+  <a href={{ route }} class="govuk-link"
     style="padding-top: 8px;padding-left: 20px;display: inline-block">Remove filters</a>
 
 
