Adding SAP list implementation with some tests

--- a/update_supply_chain_information/assets/stylesheets/supply_chain.scss
+++ b/update_supply_chain_information/assets/stylesheets/supply_chain.scss
@@ -19,6 +19,12 @@
   margin-bottom: 8px;
 }
 
+.sap-action-description {
+  @extend .description;
+  color: #696969;
+  margin-bottom: 3px;
+}
+
 .summary-action-description {
   @extend .description;
   color: #696969;
