--- a/update_supply_chain_information/action_progress/templates/action_progress_list.html
+++ b/update_supply_chain_information/action_progress/templates/action_progress_list.html
@@ -6,6 +6,10 @@
 <h3 class="govuk-heading-m" style="color: #797575;margin-bottom: 3px;">{{ dept }}</h3>
 <h2 class="govuk-heading-l govuk-!-font-weight-bold">{{ supply_chain_name }}</h2>
 
+<p class="govuk-body">
+  Select a strategic action to view progress details and information
+</p>
+
 <br>
 {% include "includes/tabbed_action_list.html" %}
 <br>
