Render data from StrategicAction model within SAP detail summary.

--- a/update_supply_chain_information/action_progress/templates/action_progress_details.html
+++ b/update_supply_chain_information/action_progress/templates/action_progress_details.html
@@ -16,7 +16,7 @@
 {% block page_content %}
 
 
-<h2 class="govuk-heading-l">SA Name</h2>
+<h2 class="govuk-heading-l">{{ action.name }}</h2>
 
 {% include "includes/action_summary.html" %}
 
