--- a/update_supply_chain_information/action_progress/templates/includes/action_details.html
+++ b/update_supply_chain_information/action_progress/templates/includes/action_details.html
@@ -5,6 +5,7 @@
       </span>
     </summary>
     <div class="govuk-details__text">
-      We need to know your nationality so we can work out which elections you’re entitled to vote in. If you cannot provide your nationality, you’ll have to send copies of identity documents through the post.
+      <br>
+      {% include "includes/action_info.html" %}
     </div>
   </details>
