--- a/update_supply_chain_information/action_progress/templates/includes/action_summary.html
+++ b/update_supply_chain_information/action_progress/templates/includes/action_summary.html
@@ -26,7 +26,7 @@
     <div class="govuk-summary-list__row">
         <dd class="govuk-summary-list__value">
           <h3 class="govuk-heading-s" style="padding-bottom: 10px;">Start date</h3>
-          {{ action.start_date|date:"d M Y" }}
+          {{ action.start_date|date:"j M Y" }}
         </dd>
       </div>
       <div class="govuk-summary-list__row--no-border">
