Update links for to and from SAP details page.

--- a/update_supply_chain_information/action_progress/templates/action_progress_details.html
+++ b/update_supply_chain_information/action_progress/templates/action_progress_details.html
@@ -3,7 +3,7 @@
 
 {% block page_header %}
 
-<a href="#" class="govuk-back-link">Back</a>
+<a href={% url 'action-progress-list' dept sc_slug %} class="govuk-back-link">Back</a>
 
 <h1 class="govuk-heading-xl">Strategic action progress</h1>
 
