e2e tests for SAP details

--- a/update_supply_chain_information/action_progress/templates/includes/action_details.html
+++ b/update_supply_chain_information/action_progress/templates/includes/action_details.html
@@ -1,4 +1,4 @@
-<details class="govuk-details component-panel" data-module="govuk-details">
+<details class="govuk-details component-panel" data-module="govuk-details" id="action-details">
     <summary class="govuk-details__summary">
       <span class="govuk-details__summary-text govuk-!-font-weight-bold">
         Strategic action details
