--- a/update_supply_chain_information/action_progress/templates/includes/monthly_update_details.html
+++ b/update_supply_chain_information/action_progress/templates/includes/monthly_update_details.html
@@ -1,4 +1,4 @@
-<details class="govuk-details component-panel" data-module="govuk-details">
+<details class="govuk-details component-panel" data-module="govuk-details" id="monthly-update">
     <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text govuk-!-font-weight-bold">
             Monthly update
