--- a/update_supply_chain_information/action_progress/templates/includes/action_summary.html
+++ b/update_supply_chain_information/action_progress/templates/includes/action_summary.html
@@ -1,4 +1,4 @@
-<dl class="govuk-summary-list">
+<dl class="govuk-summary-list" id="action-summary">
     <div class="govuk-summary-list__row">
       <dd class="govuk-summary-list__value">
         <h3 class="govuk-heading-s" style="padding-bottom: 10px;">Department</h3>
