Decrease the font size for notes within SAP details

--- a/update_supply_chain_information/action_progress/templates/includes/monthly_update_details.html
+++ b/update_supply_chain_information/action_progress/templates/includes/monthly_update_details.html
@@ -36,7 +36,7 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row--no-border">
-                <dd class="govuk-summary-list__value">
+                <dd class="govuk-summary-list__value" style="font-size: 16px;">
                     Last updated on {{ update.submission_date|date:"l, M Y" }}
                 </dd>
             </div>
