--- a/update_supply_chain_information/action_progress/templates/includes/action_info.html
+++ b/update_supply_chain_information/action_progress/templates/includes/action_info.html
@@ -59,7 +59,7 @@
       </dd>
     </div>
     <div class="govuk-summary-list__row--no-border">
-        <dd class="govuk-summary-list__value">
+        <dd class="govuk-summary-list__value" style="font-size: 16px;">
             {{ action.gsc_notes|default:"No recordings from GSC" }}
         </dd>
     </div>
