Update banner with navigation and fix tests

--- a/update_supply_chain_information/assets/stylesheets/application.scss
+++ b/update_supply_chain_information/assets/stylesheets/application.scss
@@ -53,3 +53,9 @@ span.moj-sub-navigation__link:hover {
   font: 16px;
   font-family: sans-serif;
 }
+
+.service-banner-grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 10px;
+}
